# Etude42

./: .clang-format  CMakeLists.txt  README.md  main.c
.github/workflows/: check.yaml  format_check.yaml
src/: a.out  config.c  config.h  display.c  display.h  file_manager.c  file_manager.h  input_handler.c  input_handler.h  main.c
